<resources>
    <string name="app_name">SavorySecrets</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phonenumber">Phone Number</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation_screen">NavigationScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_step1">Step 1</string>
    <string name="recipe_step2">Step 2</string>
    <string name="recipe_step3">Step 3</string>
    <string name="recipe_step4">Step 4</string>
    <string name="recipe_step5">Step 5</string>
    <string name="recipe_cooking">Cooking Instructions</string>
</resources>