<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sign Up"
            android:textSize="35dp"
            app:layout_constraintTop_toTopOf="@+id/LinearLayout1" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="496dp" />

        <EditText
            android:id="@+id/editTextPersonFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_firstname"
            android:ems="10"
            android:hint="@string/prompt_firstname"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="378dp" />

        <EditText
            android:id="@+id/editTextPersonLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_lastname"
            android:ems="10"
            android:hint="@string/prompt_lastname"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="442dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="556dp" />

        <Button
            android:id="@+id/sign_up_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SIGN UP"/>
            //android:onClick="this"
            //tools:ignore="OnClick"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>